# CppSdl2

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CppSdl2Config.cmake.in  LICENSE.txt  README.md  cppsdl2.natstepfilter  install_vcpkg_dependencies.bat  install_vcpkg_dependencies.sh  vcpkg-configuration.json  vcpkg.json  vcpkg_dependencies
.github/workflows/: ci.yml
CppSdl2_Example/: CMakeLists.txt
CppSdl2_Example/data/: testShader2_1.fra.glsl  testShader2_2_1.fra.glsl  testShader_330.ver.glsl
CppSdl2_Example/src/: batchtriangles.cpp  batchtriangles.h  batchtrianglesindexes.cpp  batchtrianglesindexes.h  graphicwindow.h  logger.h  main.cpp  testimguiwindow.cpp  testimguiwindow.h  testshader.cpp  testshader.h  testwindow.cpp  testwindow.h  testwindow2.h  types.h
CppSdl2_Test/: CMakeLists.txt
CppSdl2_Test/src/: speedtest.cpp  tests.cpp
ImGui/: CMakeLists.txt
ImGui/src/: imconfig.h  imgui_user.h
dataTest/: testShader2_1.ver.glsl  testShader2_2_1.ver.glsl  testShader2_330.fra.glsl
src/sdl/: batch.h  color.cpp  color.h  exception.h  font.cpp  font.h  framebuffer.cpp  framebuffer.h  gamecontroller.cpp  gamecontroller.h  graphic.cpp  graphic.h  imconfig.h  imgui_user.h  imguiauxiliary.cpp  imguiauxiliary.h  imguishader.cpp  imguishader.h  imguiwindow.cpp  imguiwindow.h  initmixer.cpp  initmixer.h  initsdl.cpp  initsdl.h  initttf.cpp  initttf.h  logger.cpp  logger.h  music.cpp  music.h  opengl.cpp  opengl.h  rect.h  shader.cpp  shader.h  shaderprogram.cpp  shaderprogram.h  sound.cpp  sound.h  sprite.cpp  (+18 more)
srcCatchTest/: speedtest.cpp
srcTest/: batchtriangles.cpp  batchtriangles.h  batchtrianglesindexes.cpp  batchtrianglesindexes.h  definitions.h  main.cpp  testimguiwindow.cpp  testimguiwindow.h  testshader.cpp  testshader.h  testshader2.cpp  testshader2.h  testwindow.cpp  testwindow.h  testwindow2.h  types.h
